added cart-context and cart-dropdown

--- a/src/routes/navigation/navigation.styles.scss
+++ b/src/routes/navigation/navigation.styles.scss
@@ -3,7 +3,7 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
-    align-items: c;
+    align-items: center;
     margin-block: 5px;
   
     .logo-container {
