--- a/src/components/CartDropdown/cart-dropdown.styles.scss
+++ b/src/components/CartDropdown/cart-dropdown.styles.scss
@@ -9,6 +9,17 @@
   background-color: white;
   top: 90px;
   right: 40px;
+  ::-webkit-scrollbar {
+    // display: none;
+    background-color: rgba(125, 121, 121, 0.5);
+    width: 8px;
+    border-radius: 500px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    border-radius: 20px;
+    background-color: rgba(47, 46, 46, 0.482);
+  }
   z-index: 5;
 
   .empty-message {
@@ -21,9 +32,11 @@
     display: flex;
     flex-direction: column;
     overflow: auto;
+    margin-bottom: 10px ;
   }
 
   button {
     margin-top: auto;
+    margin-inline: auto;
   }
 }
